Añade Google Tag Manager a las páginas principales y del blog
Se integraron scripts de Google Tag Manager en index.html y blog/index.html para el seguimiento analítico. También se realizaron pequeños ajustes de formato para mejorar la legibilidad del código.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Novinho Dev (Alexis Jara) - Desarrollador Web y Front-End Developer en Paraguay. Creación de sitios web, landing pages y portafolios profesionales.">
-    <meta name="keywords" content="Novinho Dev (Alexis Jara), Desarrollador Web, Front-End Developer, Paraguay, Sitios Web, Landing Pages, Portafolios">
+    <meta name="description"
+        content="Novinho Dev (Alexis Jara) - Desarrollador Web y Front-End Developer en Paraguay. Creación de sitios web, landing pages y portafolios profesionales.">
+    <meta name="keywords"
+        content="Novinho Dev (Alexis Jara), Desarrollador Web, Front-End Developer, Paraguay, Sitios Web, Landing Pages, Portafolios">
     <meta name="author" content="Novinho Dev (Alexis Jara)">
     <title>Novinho Dev | Desarrollador Web & Front-End Developer en Paraguay</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
+
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-PLNPW64H');
+    </script>
+    <!-- End Google Tag Manager -->
+
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
     <link
         href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;500;700;900&family=Space+Mono:ital,wght@0,400;0,700;1,400&display=swap"
@@ -17,6 +32,11 @@
 </head>
 
 <body>
+
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PLNPW64H" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
     <div class="noise-overlay"></div>
 
@@ -115,7 +135,8 @@
                 <div class="about-image-col reveal-left">
                     <div class="image-frame">
                         <div class="image-placeholder">
-                            <img class="about-imagen" src="./assets/images/about-image.png" alt="Novinho Dev (Alexis Jara), desarrollador web en Paraguay">
+                            <img class="about-imagen" src="./assets/images/about-image.png"
+                                alt="Novinho Dev (Alexis Jara), desarrollador web en Paraguay">
                         </div>
                         <div class="floating-card card-1">
                             <i class="ph ph-code"></i> Developer
@@ -128,7 +149,8 @@
                 <div class="about-text-col reveal-right">
                     <span class="section-tag">01. Sobre Mí</span>
                     <h2>Código limpio,<br>Diseño <span class="text-beige">humano.</span></h2>
-                    <p>En un mundo digital saturado, la claridad es poder. Soy "NovinhoDev", un desarrollador Front-End en Paraguay
+                    <p>En un mundo digital saturado, la claridad es poder. Soy "NovinhoDev", un desarrollador Front-End
+                        en Paraguay
                         con ojo para el detalle visual.</p>
                     <p>No solo entrego código; entrego soluciones escalables. Me especializo en traducir identidades de
                         marca en interfaces fluidas y funcionales, cuidando cada pixel y cada línea de lógica.</p>
@@ -189,7 +211,8 @@
             <div class="portfolio-grid">
                 <div class="portfolio-item reveal-up">
                     <div class="portfolio-thumb">
-                        <img class="portfolio-image" src="./assets/images/portfolio-3.png" alt="InoFisio - Landing Page">
+                        <img class="portfolio-image" src="./assets/images/portfolio-3.png"
+                            alt="InoFisio - Landing Page">
                         <div class="thumb-overlay">
                             <a href="https://alexis14jara.github.io/InoFisioPreview/" class="btn-circle"><i
                                     class="ph ph-arrow-up-right"></i></a>
@@ -217,7 +240,8 @@
                 </div>
                 <div class="portfolio-item reveal-up delay-2">
                     <div class="portfolio-thumb">
-                        <img class="portfolio-image" src="./assets/images/portfolio-1.png" alt="PabloBarber - Landing Page">
+                        <img class="portfolio-image" src="./assets/images/portfolio-1.png"
+                            alt="PabloBarber - Landing Page">
                         <div class="thumb-overlay">
                             <a href="https://alexis14jara.github.io/PabloBarber/" class="btn-circle"><i
                                     class="ph ph-arrow-up-right"></i></a>
