--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                     <span class="nav-num">02</span>
                     <span class="nav-text">Sobre Mí</span>
                 </a>
-                <a href="#services" class="mobile-link">
+                <a href="#skills" class="mobile-link">
                     <span class="nav-num">03</span>
-                    <span class="nav-text">Servicios</span>
+                    <span class="nav-text">Habilidades</span>
                 </a>
                 <a href="#portfolio" class="mobile-link">
                     <span class="nav-num">04</span>
