--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <nav class="nav-desktop">
                 <ul>
                     <li><a href="#about">Sobre Mí</a></li>
-                    <li><a href="#services">Servicios</a></li>
+                    <li><a href="#skills">Habilidades</a></li>
                     <li><a href="#portfolio">Proyectos</a></li>
                 </ul>
                 <a href="#contact" class="btn btn-sm">Hablemos</a>
