Agregar el proyecto NovaMapScraper y actualizar los enlaces del proyecto
Se agregó el proyecto NovaMapScraper con todos los recursos relacionados, incluyendo HTML, CSS, JS, imágenes y un video de demostración. Se actualizaron los enlaces del proyecto en las páginas principal e índice en inglés para que dirijan a la nueva página del proyecto NovaMapScraper en lugar de a enlaces de compra externos.

--- a/en/index.html
+++ b/en/index.html
@@ -240,7 +240,7 @@
                             <span class="tech-pill">CSS3</span>
                         </div>
                         <div class="card-footer">
-                            <a href="https://wa.me/595983092018?text=Hola,%20me%20interesa%20tu%20herramienta%20NovaMapScraper" class="btn-card-action">Buy Extension <i class="ph-bold ph-arrow-right"></i></a>
+                            <a href="../NovaMapScraper/" class="btn-card-action">View Project <i class="ph-bold ph-arrow-right"></i></a>
                         </div>
                     </div>
                 </article>
