--- a/index.html
+++ b/index.html
@@ -224,7 +224,8 @@
 
                 <article class="project-card reveal-up">
                     <div class="card-image-wrapper">
-                        <img src="./assets/images/portfolio-6.png" alt="NovaMapScraper - Extension Chrome / Edge" class="card-image">
+                        <img src="./assets/images/portfolio-6.png" alt="NovaMapScraper - Extension Chrome / Edge"
+                            class="card-image">
                         <span class="status-badge status-pago">💰 Pago</span>
                     </div>
                     <div class="card-content">
@@ -232,15 +233,16 @@
                             <span class="feature-badge">Extension Chrome / Edge</span>
                             <h3 class="card-title">NovaMapScraper</h3>
                         </div>
-                        <p class="card-description">NovaMapScraper es una herramienta que permite extraer información de mapas de Google Maps en formato CSV y XLSX. </p>
+                        <p class="card-description">NovaMapScraper es una herramienta que permite extraer información de
+                            mapas de Google Maps en formato CSV y XLSX. </p>
                         <div class="tech-stack">
                             <span class="tech-pill">FULL JS</span>
                             <span class="tech-pill">HTML5</span>
                             <span class="tech-pill">CSS3</span>
                         </div>
                         <div class="card-footer">
-                            <a href="https://wa.me/595983092018?text=Hola,%20me%20interesa%20tu%20herramienta%20NovaMapScraper" class="btn-card-action">Comprar
-                                Extensión <i class="ph-bold ph-arrow-right"></i></a>
+                            <a href="/NovaMapScraper/" class="btn-card-action">Ver Proyecto <i
+                                    class="ph-bold ph-arrow-right"></i></a>
                         </div>
                     </div>
                 </article>
@@ -249,7 +251,8 @@
 
                 <article class="project-card reveal-up delay-1">
                     <div class="card-image-wrapper">
-                        <img src="./assets/images/portfolio-5.png" alt="NovaFlow PRO - Extensión Chrome / Edge" class="card-image">
+                        <img src="./assets/images/portfolio-5.png" alt="NovaFlow PRO - Extensión Chrome / Edge"
+                            class="card-image">
                         <span class="status-badge status-open-source">🧩 Open Source</span>
                     </div>
                     <div class="card-content">
@@ -257,7 +260,9 @@
                             <span class="feature-badge">Extensión Chrome / Edge</span>
                             <h3 class="card-title">NovaFlow PRO</h3>
                         </div>
-                        <p class="card-description">La herramienta definitiva para la gestión de envíos masivos por whatsapp web. Control total sobre tiempos, seguridad y reportes detallados desde tu navegador.</p>
+                        <p class="card-description">La herramienta definitiva para la gestión de envíos masivos por
+                            whatsapp web. Control total sobre tiempos, seguridad y reportes detallados desde tu
+                            navegador.</p>
                         <div class="tech-stack">
                             <span class="tech-pill">FULL JS</span>
                             <span class="tech-pill">HTML5</span>
@@ -282,7 +287,8 @@
                             <span class="feature-badge">Landing Page Moderna</span>
                             <h3 class="card-title">AlnexStudio</h3>
                         </div>
-                        <p class="card-description">Landing page para Agencia de desarrollo web y servicios digitales con identidad visual moderna.</p>
+                        <p class="card-description">Landing page para Agencia de desarrollo web y servicios digitales
+                            con identidad visual moderna.</p>
                         <div class="tech-stack">
                             <span class="tech-pill">HTML5</span>
                             <span class="tech-pill">CSS3</span>
