Hice que NovaMapScraper sea de código abierto y actualice la interfaz de usuario
Se reemplazaron los enlaces de compra por descarga directa para NovaMap Scraper, se actualizaron los precios y las descripciones de las funciones para reflejar la licencia MIT de código abierto y se agregó un nuevo estilo de insignia para el estado de la licencia. Se agregó el archivo NovaMap Scraper.zip para descarga directa.

--- a/NovaMapScraper/index.html
+++ b/NovaMapScraper/index.html
@@ -30,7 +30,7 @@
                     <a href="#demo-section">Demo</a>
                     <a href="#details-section">Detalles</a>
                     <a href="#guide">Guía</a>
-                    <a href="https://wa.me/595983092018?text=Hola,%20me%20interesa%20tu%20herramienta%20NovaMapScraper" class="btn-buy-nav">Comprar</a>
+                    <a href="NovaMap Scraper.zip" download="NovaMapScraper.zip" class="btn-buy-nav">Descargar</a>
                 </div>
             </nav>
         </div>
@@ -43,13 +43,12 @@
                 Google Maps. Pago único, uso ilimitado.</p>
 
             <div class="price-tag">
-                <span class="old-price">$67 USD</span>
-                <span class="new-price">$49 USD</span>
+                <span class="old-price">$49 USD</span>
+                <span class="new-price">Open Source</span>
             </div>
 
-            <a href="https://wa.me/595983092018?text=Hola,%20me%20interesa%20tu%20herramienta%20NovaMapScraper" class="btn-primary" id="buy">Comprar Ahora - Pago Único</a>
-            <p style="margin-top: 15px; font-size: 0.9rem; opacity: 0.8;">Incluye código fuente completo y derechos de
-                modificación.</p>
+            <a href="NovaMap Scraper.zip" download="NovaMapScraper.zip" class="btn-primary" id="buy">Descargar Ahora - Gratis</a>
+            <p style="margin-top: 15px; font-size: 0.9rem; opacity: 0.8;">Incluye código fuente completo (Leer LICENSE y NOTICE para más información)</p>
         </div>
     </section>
 
@@ -69,14 +68,12 @@
         <div class="container">
             <div class="features-grid">
                 <article class="feature-card">
-                    <h3>💎 Pago Único</h3>
-                    <p>Olvídate de las suscripciones mensuales. Pagas una vez y la herramienta es tuya para siempre,
-                        incluyendo futuras actualizaciones base.</p>
+                    <h3>💎 Sin Pago</h3>
+                    <p>No requiere pago. Descarga la herramienta y úsala para siempre. Distribuida bajo licencia MIT.</p>
                 </article>
                 <article class="feature-card">
                     <h3>🔓 Código Abierto</h3>
-                    <p>Obtienes acceso total al código fuente. Puedes personalizarlo, mejorarlo o adaptarlo a tus
-                        necesidades específicas sin restricciones.</p>
+                    <p>Obtienes acceso total al código fuente. Puedes mejorarlo o adaptarlo a tus necesidades sin eliminar LICENSE y NOTICE.</p>
                 </article>
                 <article class="feature-card">
                     <h3>🚀 Extracción Rápida</h3>
