--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                     <div class="card-image-wrapper">
                         <img src="./assets/images/portfolio-6.png" alt="NovaMapScraper - Extension Chrome / Edge"
                             class="card-image">
-                        <span class="status-badge status-pago">💰 Pago</span>
+                        <span class="status-badge status-license">🌟 Bajo Licencia MIT</span>
                     </div>
                     <div class="card-content">
                         <div class="card-header">
